# talkytrend

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  renovate.json
.github/workflows/: DockerHub.yml  ✨Flow.yml  👷Flow.yml  👷‍♂️Flow.yml
.registry/: Dockerfile
.requirements/: requirements.txt
docs/: 01_start.rst  02_config.rst  03_module.rst  conf.py  index copy.rst  index.rst
docs/docs/: conf.py
examples/: example.py  example_TalkyBreaking.py  requirements.txt  troubhoot
src/: bot.py  old_bot.py
talkytrend/: __init__.py  config.py  default_settings.toml  main.py  news.json
talkytrend/handler/: __init__.py  _client.py  alphavantage.py  calendar.py  client.py  cot.py  feed.py  finage.py  finnhub.py  forexnewsapi.py  livetv.py  marketaux.py  newsfilterio.py  polygon.py  scraper.py  tradermade.py  tradingeconomics.py  tradingview.py  tv.py  twelvedata.py  websocket.py  yfinance.py
tests/: test_unit.py  test_unit_exception.py
