
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "talkytrend"
version = "3.0.6"
description = "A python package to retrieve  economic data such as Trend for any financial symbol."
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
keywords = ["finance", "crypto", "bot","trend","economic"]
packages = [
    {include = "talkytrend"}
]


[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/talkytrend/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/talkytrend/discussions"
"Issues" =  "https://github.com/mraniki/talkytrend/issues"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"
loguru = ">=0.6.0"
aiohttp = "^3.8.4"
xmltodict = "*"
prettytable = "^3.8.0"
tradingview_ta = "^3.3.0"
yfinance = "^0.2.25"
finnhub-python = "2.4.20"
# cot_reports = "0.1.3"


[tool.poetry.group.dev.dependencies]
python-semantic-release = ">=8.0.8"
ruff = "^0.5.0"
#black = "^24.0.0"
pre-commit = "^3.3.1"

[tool.ruff]
exclude = [
  ".github/*",
  "docs/*",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "W"
]

#ignore = ["E401","F401","F811"]
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.pylint.exceptions]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
    "builtins.RuntimeError",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.bandit]
exclude_dirs = ["tests","docs"]
skips = ["B101","B104"]

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.11.1"
pytest-loguru = "^0.3.0"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
python_classes = "Test*"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
  "tests/*",
  "examples/*",
  "docs/*",
  "*/config.py"
  ]


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
pydata-sphinx-theme = "^0.15.0"
sphinx-hoverxref = "^1.3.0"
sphinx_design = "^0.6.0"
sphinx_copybutton = "^0.5.2"
myst_parser = ">=3,<5"

[tool.semantic_release]
version_variables = ["talkytrend/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"
commit_parser = "emoji"
version_toml = [
   "pyproject.toml:tool.poetry.version",
   ]

[tool.semantic_release.commit_parser_options]
major_tags = [
    "BREAKING",
    "ðŸ’¥",
    ":boom:",
  ]
minor_tags = ["feat",
    "ðŸ¥š",":egg:",
    "ðŸš€",":rocket:",
    "ðŸ’„",":lipstick:",
    "âœ¨",":sparkles:",
]

patch_tags = ["fix","bump","Update",
    "ðŸŽ¨",":art:",
    "ðŸ›",":bug:",
    "ðŸš‘",":ambulance:",
    "âš¡",":zap:",
    "ðŸ”¥",":fire:",
    "ðŸš¨",":rotating_light:",
    "â™»ï¸",":recycle:",
    "ðŸ”§",":wrench:",
    "â¬†ï¸",":arrow_up:",
    "ðŸ©¹",":adhesive_bandage:",
    "ðŸ‘·",":construction_worker:",
    "ðŸ“",":memo:",
    "ðŸ”’",":lock:",
    "ðŸ‘½",":alien:",
    "ðŸ’¬",":speech_balloon:",
    "ðŸ¥…",":goal_net:",
    "âœ…",":white_check_mark:",
    "ðŸ³",":whale:",
    "ðŸ™ˆ",":see_no_evil:",
    "âš—ï¸",":alembic:",
    "ðŸ§",":monocle_face:",
    "ðŸ”‡",":mute:",
    "ðŸ”Š",":volume:",
]

[tool.semantic_release.changelog]
# template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master|dev)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
